adjust when navbar and hero change for responsive design, only adjusts after 768px now, also fixed issue with z-index of new slideshow arrows

--- a/hero.css
+++ b/hero.css
@@ -127,7 +127,7 @@
     background-color: rgba(0, 0, 0, 0.5);
 }
 
-@media screen and (min-width: 1024px) {
+@media screen and (min-width: 768px) {
     .hero-content {
         /* position: absolute;
         top: auto;
